# src/main/java/be/oz/generative_art_world/adapter/controller/WorldController.java
@@ -2,6 +2,7 @@ package be.oz.generative_art_world.adapter.controller;
 
 import be.oz.generative_art_world.adapter.model.CreateWorldRequest;
 import be.oz.generative_art_world.adapter.model.WorldDefinition;
+import be.oz.generative_art_world.domain.PatternType;
 import be.oz.generative_art_world.usecase.CreateWorldUseCase;
 import be.oz.generative_art_world.usecase.ExportWorldUseCase;
 import be.oz.generative_art_world.usecase.GetWorldUseCase;
@@ -60,8 +61,10 @@ public class WorldController implements WorldApi {
         var density = createWorldRequest.getDensity();
         var verticalBias = createWorldRequest.getVerticalBias();
         var fogDensity = createWorldRequest.getFogDensity();
+        var apiPatternType = createWorldRequest.getPatternType();
+        PatternType patternType = apiPatternType != null ? PatternType.valueOf(apiPatternType.name()) : null;
 
-        var created = createWorldUseCase.execute(seed, flowScale, flowComplexity, density, verticalBias, fogDensity);
+        var created = createWorldUseCase.execute(seed, flowScale, flowComplexity, density, verticalBias, fogDensity, patternType);
 
         return ResponseEntity.status(201).body(worldMapper.toApi(created));
     }
