# src/main/java/be/oz/generative_art_world/adapter/controller/WorldMapper.java
@@ -1,6 +1,7 @@
 package be.oz.generative_art_world.adapter.controller;
 
 import be.oz.generative_art_world.domain.FlowFieldType;
+import be.oz.generative_art_world.domain.PatternType;
 import org.springframework.stereotype.Component;
 
 import java.math.BigDecimal;
@@ -16,13 +17,65 @@ public class WorldMapper {
                 new be.oz.generative_art_world.adapter.model.WorldDefinition();
 
         api.setId(domain.getId());
-        api.setSeed((int) domain.getSeed());
+        api.setSeed(domain.getSeed());
         api.setPalette(domain.getPalette().colors());
         api.setFlowFields(toApiFlowFields(domain.getFlowFields()));
         api.setGeometryFields(toApiGeometryFields(domain.getGeometryFields()));
         api.setAmbient(toApiAmbient(domain.getAmbientSettings()));
         api.setBounds(toApiBounds(domain.getBounds()));
 
+        if (domain.getPattern() != null) {
+            api.setPattern(toApiPattern(domain.getPattern()));
+        }
+
+        return api;
+    }
+
+    private be.oz.generative_art_world.adapter.model.Pattern toApiPattern(
+            be.oz.generative_art_world.domain.Pattern domain) {
+        be.oz.generative_art_world.adapter.model.Pattern api =
+                new be.oz.generative_art_world.adapter.model.Pattern();
+        api.setType(toApiPatternType(domain.type()));
+        api.setPoints(domain.points().stream().map(this::toApiPoint3D).toList());
+        api.setLines(domain.lines().stream().map(this::toApiLine3D).toList());
+        api.setParameters(toApiPatternParameters(domain.parameters()));
+        return api;
+    }
+
+    private be.oz.generative_art_world.adapter.model.Pattern.TypeEnum toApiPatternType(PatternType type) {
+        return be.oz.generative_art_world.adapter.model.Pattern.TypeEnum.valueOf(type.name());
+    }
+
+    private be.oz.generative_art_world.adapter.model.Point3D toApiPoint3D(
+            be.oz.generative_art_world.domain.Pattern.Point3D domain) {
+        be.oz.generative_art_world.adapter.model.Point3D api =
+                new be.oz.generative_art_world.adapter.model.Point3D();
+        api.setX(domain.x());
+        api.setY(domain.y());
+        api.setZ(domain.z());
+        api.setColor(domain.color());
+        api.setSize(domain.size());
+        return api;
+    }
+
+    private be.oz.generative_art_world.adapter.model.Line3D toApiLine3D(
+            be.oz.generative_art_world.domain.Pattern.Line3D domain) {
+        be.oz.generative_art_world.adapter.model.Line3D api =
+                new be.oz.generative_art_world.adapter.model.Line3D();
+        api.setVertices(domain.vertices().stream().map(this::toApiPoint3D).toList());
+        api.setColor(domain.color());
+        api.setWidth(domain.width());
+        return api;
+    }
+
+    private be.oz.generative_art_world.adapter.model.PatternParameters toApiPatternParameters(
+            be.oz.generative_art_world.domain.Pattern.PatternParameters domain) {
+        be.oz.generative_art_world.adapter.model.PatternParameters api =
+                new be.oz.generative_art_world.adapter.model.PatternParameters();
+        api.setIterations(domain.iterations());
+        api.setScale(domain.scale());
+        api.setComplexity(domain.complexity());
+        api.setRule(domain.rule());
         return api;
     }
 
@@ -40,6 +93,7 @@ public class WorldMapper {
         api.setType(toApiFlowFieldType(domain.type()));
         api.setScale(BigDecimal.valueOf(domain.scale()));
         api.setStrength(BigDecimal.valueOf(domain.strength()));
+        api.setFieldSeed(domain.fieldSeed());
         return api;
     }
 
